deploy: fd19c635d12d596c910f043e18a08feaab451178

--- a/_modules/modelgraph/dependency_graph.html
+++ b/_modules/modelgraph/dependency_graph.html
@@ -127,7 +127,6 @@
 
 
 <span class="k">def</span> <span class="nf">_add_dependents_recursively</span><span class="p">(</span><span class="n">func</span><span class="p">:</span> <span class="n">Callable</span><span class="p">[[</span><span class="nb">str</span><span class="p">],</span> <span class="nb">set</span><span class="p">[</span><span class="nb">str</span><span class="p">]],</span> <span class="n">arg</span><span class="p">:</span> <span class="nb">str</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="nb">set</span><span class="p">[</span><span class="nb">str</span><span class="p">]:</span>
-
     <span class="n">deps</span> <span class="o">=</span> <span class="nb">set</span><span class="p">()</span>
 
     <span class="k">def</span> <span class="nf">add_deps</span><span class="p">(</span><span class="n">root</span><span class="p">):</span>
@@ -144,7 +143,6 @@
     <span class="n">G</span> <span class="o">=</span> <span class="n">nx</span><span class="o">.</span><span class="n">DiGraph</span><span class="p">()</span>
 
     <span class="k">def</span> <span class="nf">build_graph</span><span class="p">(</span><span class="n">root</span><span class="p">):</span>
-
         <span class="n">deps</span> <span class="o">=</span> <span class="n">func</span><span class="p">(</span><span class="n">root</span><span class="p">)</span>
         <span class="k">for</span> <span class="n">dep</span> <span class="ow">in</span> <span class="n">deps</span><span class="p">:</span>
             <span class="n">G</span><span class="o">.</span><span class="n">add_edge</span><span class="p">(</span><span class="n">root</span><span class="p">,</span> <span class="n">dep</span><span class="p">)</span>
@@ -156,7 +154,7 @@
 
 <div class="viewcode-block" id="DependencyGraph"><a class="viewcode-back" href="../../modelgraph.html#modelgraph.dependency_graph.DependencyGraph">[docs]</a><span class="k">class</span> <span class="nc">DependencyGraph</span><span class="p">:</span>
     <span class="k">def</span> <span class="fm">__init__</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">ode</span><span class="p">:</span> <span class="n">gotran</span><span class="o">.</span><span class="n">ODE</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="kc">None</span><span class="p">:</span>
-        <span class="sd">&quot;&quot;&quot;Intialize dependency graph</span>
+<span class="w">        </span><span class="sd">&quot;&quot;&quot;Intialize dependency graph</span>
 
 <span class="sd">        Parameters</span>
 <span class="sd">        ----------</span>
@@ -170,12 +168,10 @@
         <span class="bp">self</span><span class="o">.</span><span class="n">_load_dependents</span><span class="p">()</span>
 
     <span class="k">def</span> <span class="nf">_load_dependents</span><span class="p">(</span><span class="bp">self</span><span class="p">):</span>
-        <span class="sd">&quot;&quot;&quot;Load dependencies from ode&quot;&quot;&quot;</span>
+<span class="w">        </span><span class="sd">&quot;&quot;&quot;Load dependencies from ode&quot;&quot;&quot;</span>
         <span class="k">for</span> <span class="n">intermediate</span> <span class="ow">in</span> <span class="bp">self</span><span class="o">.</span><span class="n">_ode</span><span class="o">.</span><span class="n">intermediates</span> <span class="o">+</span> <span class="bp">self</span><span class="o">.</span><span class="n">_ode</span><span class="o">.</span><span class="n">state_expressions</span><span class="p">:</span>
-
             <span class="bp">self</span><span class="o">.</span><span class="n">_dependents</span><span class="p">[</span><span class="n">intermediate</span><span class="o">.</span><span class="n">name</span><span class="p">]</span> <span class="o">=</span> <span class="nb">set</span><span class="p">()</span>
             <span class="k">for</span> <span class="n">dependent</span> <span class="ow">in</span> <span class="n">intermediate</span><span class="o">.</span><span class="n">dependent</span><span class="p">:</span>
-
                 <span class="k">if</span> <span class="n">dependent</span><span class="o">.</span><span class="n">is_Symbol</span><span class="p">:</span>
                     <span class="n">depname</span> <span class="o">=</span> <span class="nb">str</span><span class="p">(</span><span class="n">dependent</span><span class="p">)</span>
 
@@ -190,7 +186,7 @@
 
     <span class="nd">@property</span>
     <span class="k">def</span> <span class="nf">dependent_names</span><span class="p">(</span><span class="bp">self</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="nb">list</span><span class="p">[</span><span class="nb">str</span><span class="p">]:</span>
-        <span class="sd">&quot;&quot;&quot;Return all the names of the expressions having dependencies</span>
+<span class="w">        </span><span class="sd">&quot;&quot;&quot;Return all the names of the expressions having dependencies</span>
 
 <span class="sd">        Returns</span>
 <span class="sd">        -------</span>
@@ -201,7 +197,7 @@
 
     <span class="nd">@property</span>
     <span class="k">def</span> <span class="nf">inv_dependent_names</span><span class="p">(</span><span class="bp">self</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="nb">list</span><span class="p">[</span><span class="nb">str</span><span class="p">]:</span>
-        <span class="sd">&quot;&quot;&quot;Return all the names of the expressions that other expressions depdens on</span>
+<span class="w">        </span><span class="sd">&quot;&quot;&quot;Return all the names of the expressions that other expressions depdens on</span>
 
 <span class="sd">        Returns</span>
 <span class="sd">        -------</span>
@@ -212,11 +208,11 @@
 
     <span class="nd">@property</span>
     <span class="k">def</span> <span class="nf">ode</span><span class="p">(</span><span class="bp">self</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="n">gotran</span><span class="o">.</span><span class="n">ODE</span><span class="p">:</span>
-        <span class="sd">&quot;&quot;&quot;Return the ode&quot;&quot;&quot;</span>
+<span class="w">        </span><span class="sd">&quot;&quot;&quot;Return the ode&quot;&quot;&quot;</span>
         <span class="k">return</span> <span class="bp">self</span><span class="o">.</span><span class="n">_ode</span>
 
 <div class="viewcode-block" id="DependencyGraph.dependents"><a class="viewcode-back" href="../../modelgraph.html#modelgraph.dependency_graph.DependencyGraph.dependents">[docs]</a>    <span class="k">def</span> <span class="nf">dependents</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">name</span><span class="p">:</span> <span class="nb">str</span><span class="p">,</span> <span class="n">direct</span><span class="p">:</span> <span class="nb">bool</span> <span class="o">=</span> <span class="kc">True</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="nb">set</span><span class="p">[</span><span class="nb">str</span><span class="p">]:</span>
-        <span class="sd">&quot;&quot;&quot;Given a name of an expression return its dependencies</span>
+<span class="w">        </span><span class="sd">&quot;&quot;&quot;Given a name of an expression return its dependencies</span>
 
 <span class="sd">        Parameters</span>
 <span class="sd">        ----------</span>
@@ -238,7 +234,7 @@
         <span class="k">return</span> <span class="n">_add_dependents_recursively</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">dependents</span><span class="p">,</span> <span class="n">name</span><span class="p">)</span></div>
 
 <div class="viewcode-block" id="DependencyGraph.inv_dependents"><a class="viewcode-back" href="../../modelgraph.html#modelgraph.dependency_graph.DependencyGraph.inv_dependents">[docs]</a>    <span class="k">def</span> <span class="nf">inv_dependents</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">name</span><span class="p">:</span> <span class="nb">str</span><span class="p">,</span> <span class="n">direct</span><span class="p">:</span> <span class="nb">bool</span> <span class="o">=</span> <span class="kc">True</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="nb">set</span><span class="p">[</span><span class="nb">str</span><span class="p">]:</span>
-        <span class="sd">&quot;&quot;&quot;Given a name of an expression return all expressions</span>
+<span class="w">        </span><span class="sd">&quot;&quot;&quot;Given a name of an expression return all expressions</span>
 <span class="sd">        that depends on it</span>
 
 <span class="sd">        Parameters</span>
@@ -261,7 +257,7 @@
         <span class="k">return</span> <span class="n">_add_dependents_recursively</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">inv_dependents</span><span class="p">,</span> <span class="n">name</span><span class="p">)</span></div>
 
 <div class="viewcode-block" id="DependencyGraph.dependency_graph"><a class="viewcode-back" href="../../modelgraph.html#modelgraph.dependency_graph.DependencyGraph.dependency_graph">[docs]</a>    <span class="k">def</span> <span class="nf">dependency_graph</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">name</span><span class="p">:</span> <span class="nb">str</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="n">nx</span><span class="o">.</span><span class="n">DiGraph</span><span class="p">:</span>
-        <span class="sd">&quot;&quot;&quot;Get the dependency graph where each node reperesents</span>
+<span class="w">        </span><span class="sd">&quot;&quot;&quot;Get the dependency graph where each node reperesents</span>
 <span class="sd">        an expression and a directed edge means that there is</span>
 <span class="sd">        a dependency.</span>
 
@@ -282,7 +278,7 @@
         <span class="k">return</span> <span class="n">_build_graph</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">dependents</span><span class="p">,</span> <span class="n">name</span><span class="p">)</span></div>
 
 <div class="viewcode-block" id="DependencyGraph.inv_dependency_graph"><a class="viewcode-back" href="../../modelgraph.html#modelgraph.dependency_graph.DependencyGraph.inv_dependency_graph">[docs]</a>    <span class="k">def</span> <span class="nf">inv_dependency_graph</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">name</span><span class="p">:</span> <span class="nb">str</span><span class="p">):</span>
-        <span class="sd">&quot;&quot;&quot;Get the dependency graph where each node reperesents</span>
+<span class="w">        </span><span class="sd">&quot;&quot;&quot;Get the dependency graph where each node reperesents</span>
 <span class="sd">        an expression and a directed edge means that there is</span>
 <span class="sd">        a dependency.</span>
 
