--- a/_modules/modelgraph/dependency_graph.html
+++ b/_modules/modelgraph/dependency_graph.html
@@ -9,9 +9,9 @@
           <link rel="stylesheet" href="../../_static/theme.css " type="text/css" />
       
       <!-- sphinx script_files -->
-        <script data-url_root="../../" id="documentation_options" src="../../_static/documentation_options.js?v=2389946f"></script>
+        <script src="../../_static/documentation_options.js?v=01f34227"></script>
         <script src="../../_static/doctools.js?v=888ff710"></script>
-        <script src="../../_static/sphinx_highlight.js?v=4825356b"></script>
+        <script src="../../_static/sphinx_highlight.js?v=dc90522c"></script>
 
       
       <!-- bundled in js (rollup iife) -->
@@ -149,7 +149,9 @@
     <span class="k">return</span> <span class="n">G</span>
 
 
-<div class="viewcode-block" id="DependencyGraph"><a class="viewcode-back" href="../../modelgraph.html#modelgraph.dependency_graph.DependencyGraph">[docs]</a><span class="k">class</span> <span class="nc">DependencyGraph</span><span class="p">:</span>
+<div class="viewcode-block" id="DependencyGraph">
+<a class="viewcode-back" href="../../modelgraph.html#modelgraph.dependency_graph.DependencyGraph">[docs]</a>
+<span class="k">class</span> <span class="nc">DependencyGraph</span><span class="p">:</span>
     <span class="k">def</span> <span class="fm">__init__</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">ode</span><span class="p">:</span> <span class="n">gotran</span><span class="o">.</span><span class="n">ODE</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="kc">None</span><span class="p">:</span>
 <span class="w">        </span><span class="sd">&quot;&quot;&quot;Intialize dependency graph</span>
 
@@ -208,7 +210,9 @@
 <span class="w">        </span><span class="sd">&quot;&quot;&quot;Return the ode&quot;&quot;&quot;</span>
         <span class="k">return</span> <span class="bp">self</span><span class="o">.</span><span class="n">_ode</span>
 
-<div class="viewcode-block" id="DependencyGraph.dependents"><a class="viewcode-back" href="../../modelgraph.html#modelgraph.dependency_graph.DependencyGraph.dependents">[docs]</a>    <span class="k">def</span> <span class="nf">dependents</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">name</span><span class="p">:</span> <span class="nb">str</span><span class="p">,</span> <span class="n">direct</span><span class="p">:</span> <span class="nb">bool</span> <span class="o">=</span> <span class="kc">True</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="nb">set</span><span class="p">[</span><span class="nb">str</span><span class="p">]:</span>
+<div class="viewcode-block" id="DependencyGraph.dependents">
+<a class="viewcode-back" href="../../modelgraph.html#modelgraph.dependency_graph.DependencyGraph.dependents">[docs]</a>
+    <span class="k">def</span> <span class="nf">dependents</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">name</span><span class="p">:</span> <span class="nb">str</span><span class="p">,</span> <span class="n">direct</span><span class="p">:</span> <span class="nb">bool</span> <span class="o">=</span> <span class="kc">True</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="nb">set</span><span class="p">[</span><span class="nb">str</span><span class="p">]:</span>
 <span class="w">        </span><span class="sd">&quot;&quot;&quot;Given a name of an expression return its dependencies</span>
 
 <span class="sd">        Parameters</span>
@@ -230,7 +234,10 @@
         <span class="c1"># Grab all decendents recursively</span>
         <span class="k">return</span> <span class="n">_add_dependents_recursively</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">dependents</span><span class="p">,</span> <span class="n">name</span><span class="p">)</span></div>
 
-<div class="viewcode-block" id="DependencyGraph.inv_dependents"><a class="viewcode-back" href="../../modelgraph.html#modelgraph.dependency_graph.DependencyGraph.inv_dependents">[docs]</a>    <span class="k">def</span> <span class="nf">inv_dependents</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">name</span><span class="p">:</span> <span class="nb">str</span><span class="p">,</span> <span class="n">direct</span><span class="p">:</span> <span class="nb">bool</span> <span class="o">=</span> <span class="kc">True</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="nb">set</span><span class="p">[</span><span class="nb">str</span><span class="p">]:</span>
+
+<div class="viewcode-block" id="DependencyGraph.inv_dependents">
+<a class="viewcode-back" href="../../modelgraph.html#modelgraph.dependency_graph.DependencyGraph.inv_dependents">[docs]</a>
+    <span class="k">def</span> <span class="nf">inv_dependents</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">name</span><span class="p">:</span> <span class="nb">str</span><span class="p">,</span> <span class="n">direct</span><span class="p">:</span> <span class="nb">bool</span> <span class="o">=</span> <span class="kc">True</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="nb">set</span><span class="p">[</span><span class="nb">str</span><span class="p">]:</span>
 <span class="w">        </span><span class="sd">&quot;&quot;&quot;Given a name of an expression return all expressions</span>
 <span class="sd">        that depends on it</span>
 
@@ -253,7 +260,10 @@
         <span class="c1"># Grab all decendents recursively</span>
         <span class="k">return</span> <span class="n">_add_dependents_recursively</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">inv_dependents</span><span class="p">,</span> <span class="n">name</span><span class="p">)</span></div>
 
-<div class="viewcode-block" id="DependencyGraph.dependency_graph"><a class="viewcode-back" href="../../modelgraph.html#modelgraph.dependency_graph.DependencyGraph.dependency_graph">[docs]</a>    <span class="k">def</span> <span class="nf">dependency_graph</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">name</span><span class="p">:</span> <span class="nb">str</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="n">nx</span><span class="o">.</span><span class="n">DiGraph</span><span class="p">:</span>
+
+<div class="viewcode-block" id="DependencyGraph.dependency_graph">
+<a class="viewcode-back" href="../../modelgraph.html#modelgraph.dependency_graph.DependencyGraph.dependency_graph">[docs]</a>
+    <span class="k">def</span> <span class="nf">dependency_graph</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">name</span><span class="p">:</span> <span class="nb">str</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="n">nx</span><span class="o">.</span><span class="n">DiGraph</span><span class="p">:</span>
 <span class="w">        </span><span class="sd">&quot;&quot;&quot;Get the dependency graph where each node reperesents</span>
 <span class="sd">        an expression and a directed edge means that there is</span>
 <span class="sd">        a dependency.</span>
@@ -274,7 +284,10 @@
 <span class="sd">        &quot;&quot;&quot;</span>
         <span class="k">return</span> <span class="n">_build_graph</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">dependents</span><span class="p">,</span> <span class="n">name</span><span class="p">)</span></div>
 
-<div class="viewcode-block" id="DependencyGraph.inv_dependency_graph"><a class="viewcode-back" href="../../modelgraph.html#modelgraph.dependency_graph.DependencyGraph.inv_dependency_graph">[docs]</a>    <span class="k">def</span> <span class="nf">inv_dependency_graph</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">name</span><span class="p">:</span> <span class="nb">str</span><span class="p">):</span>
+
+<div class="viewcode-block" id="DependencyGraph.inv_dependency_graph">
+<a class="viewcode-back" href="../../modelgraph.html#modelgraph.dependency_graph.DependencyGraph.inv_dependency_graph">[docs]</a>
+    <span class="k">def</span> <span class="nf">inv_dependency_graph</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">name</span><span class="p">:</span> <span class="nb">str</span><span class="p">):</span>
 <span class="w">        </span><span class="sd">&quot;&quot;&quot;Get the dependency graph where each node reperesents</span>
 <span class="sd">        an expression and a directed edge means that there is</span>
 <span class="sd">        a dependency.</span>
@@ -292,7 +305,9 @@
 <span class="sd">        nx.DiGraph</span>
 <span class="sd">            A directed dependency graph</span>
 <span class="sd">        &quot;&quot;&quot;</span>
-        <span class="k">return</span> <span class="n">_build_graph</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">inv_dependents</span><span class="p">,</span> <span class="n">name</span><span class="p">)</span></div></div>
+        <span class="k">return</span> <span class="n">_build_graph</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">inv_dependents</span><span class="p">,</span> <span class="n">name</span><span class="p">)</span></div>
+</div>
+
 </pre></div>
 
           </div>
@@ -301,7 +316,7 @@
 </ul><div class="footer" role="contentinfo">
       &#169; Copyright 2022, Henrik Finsberg.
     <br>
-    Created using <a href="http://sphinx-doc.org/">Sphinx</a> 7.1.2 with <a href="https://github.com/schettino72/sphinx_press_theme">Press Theme</a> 0.8.0.
+    Created using <a href="http://sphinx-doc.org/">Sphinx</a> 7.2.3 with <a href="https://github.com/schettino72/sphinx_press_theme">Press Theme</a> 0.8.0.
 </div>
             </div>
           </div>
